--- a/project/style.css
+++ b/project/style.css
@@ -56,10 +56,10 @@
 
 @keyframes showSlow{
     0%{
-        transform: translateY(-350px);
+        transform: translateX(-350px);
     }
     100%{
-        transform: translateY(0);
+        transform: translateX(0);
     }
 }
 @media screen and (max-width:1100px){
@@ -82,6 +82,20 @@
     }
     .card{
         width: 18rem !important;
+    }
+    /* .about-image{
+        width: 280px !important;
+    } */
+    .about-ladder{
+        display: none !important;
+    }
+    .about-text-container{
+        text-align: center !important;
+        margin: auto;
+    }
+    .package-container{
+        flex-direction: column !important;
+        align-items: center;
     }
 }
 /* FOR LAPTOP AND I PAD PRO SCREEN */
@@ -108,6 +122,13 @@
     }
     .find-hotels-text{
         font-size: 1.5rem !important;
+    }
+    .about-ladder{
+        display: none !important;
+    }
+    .about-text-container{
+        text-align: center !important;
+        margin: auto;
     }
 }
 /* HOME CONTAINER SITE */
@@ -173,3 +194,20 @@
     margin:20px 0 !important;
     background-color: whitesmoke !important;
 }
+
+
+/* ABOUT CONTAINER SITE */
+.about-image{
+    background-image: url('../theme/pexels-mudassir-ali-2300397.jpg');
+    height: 700px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.about-ladder{
+    display: flex;
+    justify-content: space-around ;
+    align-items:center;
+    background-color: var(--primary);
+}
+
